--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.0.3"
